Fixed element overlap in cart.html

--- a/Store/CSS/Styles3.css
+++ b/Store/CSS/Styles3.css
@@ -357,6 +357,10 @@ video {
 .tableTotal td {
     padding-top: 10px;
 }
+
+#table {
+    clear: both;
+}
 /*###################
     footer
 ###################*/
